cmake_minimum_required(VERSION 3.26)
project(mesyariklekciya)

set(CMAKE_CXX_STANDARD 17)

add_executable(4_3_calls_order 4_3_calls_order.cpp)
add_executable(4_4_casts_between_base_derived 4_4_casts_between_base_derived.cpp)
add_executable(4_5_multiple_inheritance 4_5_multiple_inheritance.cpp)
add_executable(5_1_idea_of_polymorphism.cpp 5_1_idea_of_polymorphism.cpp)
add_executable(5_3_abstract_classes.cpp 5_3_abstract_classes.cpp)
add_executable(5_4_virtual_destructors.cpp 5_4_virtual_destructors.cpp)