cmake_minimum_required(VERSION 3.26)
project(mesyariklekciya)

set(CMAKE_CXX_STANDARD 17)

add_executable(4_3_calls_order 4_3_calls_order.cpp)
add_executable(4_4_casts_between_base_derived 4_4_casts_between_base_derived.cpp)
add_executable(4_5_multiple_inheritance 4_5_multiple_inheritance.cpp)
add_executable(5_1_idea_of_polymorphism.cpp 5_1_idea_of_polymorphism.cpp)
add_executable(5_3_abstract_classes.cpp 5_3_abstract_classes.cpp)
add_executable(5_4_virtual_destructors.cpp 5_4_virtual_destructors.cpp)
add_executable(5_5_RTTI.cpp 5_5_RTTI.cpp)
add_executable(6_1_intoduction_templates.cpp 6_1_intoduction_templates.cpp)
add_executable(6_2_template_func_overloading.cpp 6_2_template_func_overloading.cpp)
add_executable(6_3_template_specialization.cpp 6_3_template_specialization.cpp)
add_executable(6_4_non_type_template_parameters.cpp 6_4_non_type_template_parameters.cpp)